# nanovox

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
models/: README.md
nanovox/: __init__.py  cli.py  config.py  inference.py  model.py  tokenizer.py  vocoder.py
tests/: __init__.py  test_basic.py
